--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="title">
-      <h2>黃詩予(Molly)</h2>
+      <h2><a href="self_intro.html">黃詩予(Molly)</a></h2>
       <a href="tel:+886-975162808">0975-162-808</a>
       <a href="mailto:fomo80265@gmail.com">fomo80265@gmail.com</a>
       <img src="./images/id_photo.jpg" alt="" />
