--- a/self_intro.html
+++ b/self_intro.html
@@ -55,7 +55,7 @@
         </p>
         <p>
           2020年12月：德榕數位網頁前端設計師<br />
-          資策會課程一結束立刻進入如戰場般的廣告接案公司，雖然這份工作對於一個剛接觸這個產業的新人有點沈重，但也使我獲得很棒的履歷作品。
+          資策會課程一結束立刻進入如戰場般的廣告接案公司，使我獲得很棒的履歷作品。
         </p>
       </div>
     </section>
