--- a/self_intro.html
+++ b/self_intro.html
@@ -10,6 +10,13 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
+    <div class="menu">
+<p>S1<br><span>自我介紹</span>
+  </p>
+<p>S2<br><span>成長經歷</span></p>
+<p>S3<br><span>工作經歷</span></p>
+<p>S4<br><span>作品履歷</span></p>
+    </div>
     <section class="s1">
       <img src="./images/S__116.jpg" alt="" />
       <div>
@@ -113,5 +120,11 @@
     <section class="s5">
 <h2>THE END</h2>
     </section>
+    <script
+    src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+    crossorigin="anonymous"
+  ></script>
+  <script src="./js/index.js"></script>
   </body>
 </html>
