--- a/index.html
+++ b/index.html
@@ -240,7 +240,53 @@
         <li>特斯拉電動車產線 -產品品質測試報告</li>
       </ul>
     </div>
-
+    <div>
+      <h3>累積作品</h3>
+      <ul>
+        <li>
+          模擬服飾電商平台官網
+          <a
+            href="https://huangshihyu.github.io/20210406/ajpeace.html"
+            target="_blank"
+            alt="前往"
+          >
+            <svg
+              version="1.1"
+              xmlns="http://www.w3.org/2000/svg"
+              width="32"
+              height="32"
+              viewBox="0 0 32 32"
+            >
+              <title>arrow-right2</title>
+              <path
+                d="M19.414 27.414l10-10c0.781-0.781 0.781-2.047 0-2.828l-10-10c-0.781-0.781-2.047-0.781-2.828 0s-0.781 2.047 0 2.828l6.586 6.586h-19.172c-1.105 0-2 0.895-2 2s0.895 2 2 2h19.172l-6.586 6.586c-0.39 0.39-0.586 0.902-0.586 1.414s0.195 1.024 0.586 1.414c0.781 0.781 2.047 0.781 2.828 0z"
+              ></path>
+            </svg>
+          </a>
+        </li>
+        <li>
+          模擬領養寵物平台
+          <a
+            href="https://huangshihyu.github.io/pet_website/"
+            target="_blank"
+            alt="前往"
+          >
+            <svg
+              version="1.1"
+              xmlns="http://www.w3.org/2000/svg"
+              width="32"
+              height="32"
+              viewBox="0 0 32 32"
+            >
+              <title>arrow-right2</title>
+              <path
+                d="M19.414 27.414l10-10c0.781-0.781 0.781-2.047 0-2.828l-10-10c-0.781-0.781-2.047-0.781-2.828 0s-0.781 2.047 0 2.828l6.586 6.586h-19.172c-1.105 0-2 0.895-2 2s0.895 2 2 2h19.172l-6.586 6.586c-0.39 0.39-0.586 0.902-0.586 1.414s0.195 1.024 0.586 1.414c0.781 0.781 2.047 0.781 2.828 0z"
+              ></path>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
