--- a/index.html
+++ b/index.html
@@ -229,6 +229,24 @@
 
         <li>
           Elizabeth Arden 伊麗莎白雅頓台灣分公司 -煥亮年輕X肌質解密活動推廣頁
+          <a
+            href="https://ea2021mdevent.com/"
+            target="_blank"
+            alt="前往"
+          >
+            <svg
+              version="1.1"
+              xmlns="http://www.w3.org/2000/svg"
+              width="32"
+              height="32"
+              viewBox="0 0 32 32"
+            >
+              <title>arrow-right2</title>
+              <path
+                d="M19.414 27.414l10-10c0.781-0.781 0.781-2.047 0-2.828l-10-10c-0.781-0.781-2.047-0.781-2.828 0s-0.781 2.047 0 2.828l6.586 6.586h-19.172c-1.105 0-2 0.895-2 2s0.895 2 2 2h19.172l-6.586 6.586c-0.39 0.39-0.586 0.902-0.586 1.414s0.195 1.024 0.586 1.414c0.781 0.781 2.047 0.781 2.828 0z"
+              ></path>
+            </svg>
+          </a>
         </li>
         <li>Marc Jacobs -秒殺熱賣包款Top4 活動頁</li>
 
