--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=1440, maximum-scale=1.0, user-scalable=1"
+    />
     <title>黃詩予</title>
     <link rel="stylesheet" href="./css/index.css" />
   </head>
@@ -229,11 +232,7 @@
 
         <li>
           Elizabeth Arden 伊麗莎白雅頓台灣分公司 -煥亮年輕X肌質解密活動推廣頁
-          <a
-            href="https://ea2021mdevent.com/"
-            target="_blank"
-            alt="前往"
-          >
+          <a href="https://ea2021mdevent.com/" target="_blank" alt="前往">
             <svg
               version="1.1"
               xmlns="http://www.w3.org/2000/svg"
